--- a/package.json
+++ b/package.json
@@ -64,7 +64,16 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/cache": "^3.2.4",
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/glob": "^0.5.0",
+    "@actions/io": "^1.1.3",
+    "appdmg": "^0.6.6",
+    "gm": "^1.25.0",
+    "icns-lib": "^1.0.1",
+    "plist": "^3.1.0",
+    "tempy": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
